# dynamicdock

./: .gitignore  Procfile  README.md  package-lock.json  package.json  render.yaml  requirements.txt
backend/: pyproject.toml
backend/app/: __init__.py  config.py  docking.py  main.py  molecular.py  routes.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  config.js  index.js
frontend/src/components/: DockingConfig.js  LigandInfo.js  MolecularViewer.js
vina/: docking_result.pdbqt
